--- a/bbb-mon/frontend/index.html
+++ b/bbb-mon/frontend/index.html
@@ -46,6 +46,7 @@
 
     <footer class="footer mt-auto py-3">
         <div class="container">
+            <small>BigBlueButton Monitoring Version: <span id="text-version"></span> <br></small>
             <span class="text-muted">
                 Copyright &copy; <script>document.write(new Date().getFullYear())</script>
                 <a href="https://github.com/greenstatic/bigbluebutton-monitoring">https://github.com/greenstatic/bigbluebutton-monitoring</a>
